--- a/public/css/app.css
+++ b/public/css/app.css
@@ -47,6 +47,19 @@ footer{
     background-color: #0a253b !important;
 }
 
+/*arrow*/
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 /* link */
 a.unstyled{
     color: #002333;
